--- a/nasm/doc/Makefile
+++ b/nasm/doc/Makefile
@@ -4,7 +4,7 @@
 
 srcdir		= .
 
-prefix		= /usr/local
+prefix		= /usr
 exec_prefix	= ${prefix}
 bindir		= ${exec_prefix}/bin
 mandir		= ${datarootdir}/man
