--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ set ( testfloatprof_SRCS
     debugger/test/instructionprint_unittest.cc
     debugger/test/debuggerinterface_unittest.cc
     debugger/test/floatinstructions_unittest.cc
+    profiler/test/printfloatingoperations_unittest.cc
 )
 
 add_library ( ndisasm STATIC IMPORTED )
@@ -71,9 +72,9 @@ add_executable ( testfloatprof
 )
 target_link_libraries ( testfloatprof ${main_libs} )
 set_target_properties ( testfloatprof PROPERTIES
-	COMPILE_FLAGS "-g -O0 -fprofile-arcs -ftest-coverage"
-	LINK_FLAGS "-fprofile-arcs"
-	EXCLUDE_FROM_DEFAULT_BUILD 1
+    COMPILE_FLAGS "-g -O0 -fprofile-arcs -ftest-coverage"
+    LINK_FLAGS "-fprofile-arcs"
+    EXCLUDE_FROM_DEFAULT_BUILD 1
 )
 
 add_custom_target ( google_lint ALL
@@ -94,7 +95,8 @@ ADD_TEST(floatprof ${EXEC_DIR}/testfloatprof)
 
 add_custom_target ( coverage
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-	COMMAND make && ctest -VV && make ExperimentalCoverage || exit
-	COMMAND grep "\\\#\\\#\\\#\\\#" Testing/CoverageInfo/*.cc.gcov | egrep -v "ptracedebugger.cc.gcov:\\|gmock-gtest-all.cc.gcov:"
+	DEPENDS testfloatprof
+    COMMAND ctest -VV && make ExperimentalCoverage || exit
+    COMMAND grep "\\\#\\\#\\\#\\\#" Testing/CoverageInfo/*.cc.gcov | egrep -v "ptracedebugger.cc.gcov:\\|gmock-gtest-all.cc.gcov:" || echo 'Congratulations! .cc files completely covered with tests.'
 )
 
